test_programs/compile_failure/fv_attribute_type_check_2/src/main.nr
fn main(x: Field, y: pub Field) {
    assert(x != y);
}

#[ensures(result)]
fn foo(x: Field) -> Field {
  x + x
}

